# wayapp

./: CHANGELOG.md  Cargo.toml  README.md  SUSPEND-OPTIMIZATION.md  rustfmt.toml  wayapp.code-workspace
examples/: common_example.rs  egui_example.rs  egui_example_close.rs  egui_ime_panel.rs  egui_layer_shell_example.rs  egui_shared_example.rs  egui_tokio_async.rs  egui_transparency.rs  imgui_example.rs  layer-shell.rs  single-color-buffer.rs  windowed.rs
src/: application.rs  common.rs  common_window.rs  containers.rs  egui_app.rs  egui_impl.rs  egui_renderer.rs  frame_scheduler.rs  frame_scheduler2.rs  input_handler.rs  kind.rs  lib.rs  main.rs  single_color.rs  view_manager.rs
src/egui/: egui_containers.rs  egui_frame_scheduler.rs  egui_input_handler.rs  egui_surface_state.rs  egui_wgpu_renderer.rs  egui_wgpu_renderer_thread.rs  mod.rs
src/egui_new/: egui_input_handler.rs  egui_surface_state.rs  egui_view_manager.rs  mod.rs
src/iced/: iced_containers.rs  iced_containers2.rs  iced_containers3.rs  iced_input_handler.rs  mod.rs
src/imgui/: imgui_glow_renderer.rs  imgui_surface_state.rs  imgui_wayland_platform.rs  mod.rs
