[package]
name = "wayapp"
description = "A Wayland application wrapper using smithay-client-toolkit, supports currently just egui using wgpu"
version = "0.1.2"
license = "MIT"
license-file = "LICENSE.txt"
repository = "https://github.com/Ciantic/wayapp"
homepage = "https://github.com/Ciantic/wayapp"
edition = "2024"

[dependencies]
log = "0.4.28"
smithay-client-toolkit = "0.20.0"
smithay-clipboard = "0.7"
smol_str = "0.2"
wayland-backend = { version = "0.3.11", features = ["client_system"] }
wayland-client = "0.31.11"
wayland-protocols = "0.32.9"
wayland-protocols-wlr = "0.3.9"

# Used only by egui/wgpu backend
pollster = "0.4.0"
egui = { version = "0.33.2", optional = true }
egui-wgpu = { version = "0.33.2", optional = true }
raw-window-handle = { version = "0.6.2", optional = true }
wgpu = { version = "27.0.1", optional = true }

# Used only by iced/wgpu backend
iced = { version = "0.14.0", default-features = false, features = [
    "wgpu",
    "tokio",
    "tiny-skia",
    "image",
    "wayland",
], optional = true }
iced_core = { version = "0.14.0", optional = true }
iced_futures = { version = "0.14.0", optional = true }
iced_graphics = { version = "0.14.0", optional = true }
iced_renderer = { version = "0.14.0", optional = true }
iced_runtime = { version = "0.14.0", optional = true }
iced_tiny_skia = { version = "0.14.0", optional = true }
iced_wgpu = { version = "0.14.0", optional = true }
iced_program = { version = "0.14.0", optional = true }

[dev-dependencies]
env_logger = "0.11.8"

[features]
default = []
egui-wgpu = ["dep:egui", "dep:egui-wgpu", "dep:raw-window-handle", "dep:wgpu"]
iced-wgpu = [
    "dep:iced",
    "dep:iced_core",
    "dep:iced_futures",
    "dep:iced_graphics",
    "dep:iced_renderer",
    "dep:iced_runtime",
    "dep:iced_tiny_skia",
    "dep:iced_wgpu",
    "dep:iced_program",
    "dep:raw-window-handle",
    "dep:wgpu",
]

[lib]
name = "wayapp"
path = "src/lib.rs"
