[package]
name = "wayapp"
description = "A Wayland application wrapper using smithay-client-toolkit, supports currently just egui using wgpu"
version = "0.2.2"
license-file = "LICENSE.txt"
repository = "https://github.com/Ciantic/wayapp"
homepage = "https://github.com/Ciantic/wayapp"
edition = "2024"

[dependencies]
log = "0.4.29"
smithay-client-toolkit = "0.20.0"
smithay-clipboard = "0.7"
wayland-backend = { version = "0.3.15", features = ["client_system"] }
wayland-client = "0.31.14"
wayland-protocols = "0.32.12"
wayland-protocols-wlr = "0.3.12"

# Used only by egui/wgpu backend
futures = "0.3.32"
egui = "0.33.3"
egui-wgpu = "0.33.3"
raw-window-handle = "0.6.2"
wgpu = "27.0.1"

[dev-dependencies]
env_logger = "0.11.10"
tokio = { version = "1.51.1", features = [
    "rt",
    "time",
    "net",
    "macros",
    "rt-multi-thread",
    "sync",
] }
hotpath = { version = "0.9", features = ["hotpath", "hotpath-alloc"] }

[lib]
name = "wayapp"
path = "src/lib.rs"

[features]
_example = []

[[example]]
name = "egui_tokio_async"
required-features = ["_example"]
